# telegram-reader

./: .env.example  README.md  pyproject.toml
src/telegram_mcp/: cache.py  cli.py  config.py  server.py
